# json-schema-forge-api

./: Procfile  README.md  pyproject.toml  requirements.txt
json_schema_forge/: api.py  config.py
json_schema_forge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
json_schema_forge/core/: schema_generator.py  ts_generator.py
